# rust_gui_sandbox

./: Cargo.toml
src/: animation.rs  constants.rs  event.rs  main.rs
