[package]
name = "rust_gui"
version = "0.1.0"
authors = ["Ken Morishita <mokemokechicken@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conrod_core = "0.68.0"
conrod_glium = "0.68.0"
conrod_winit = "0.68.0"
glium = "0.24.0"
find_folder = "0.3.0"
winit = "0.19"
rand = "0.7.2"
